--- a/views/abhinay.ejs
+++ b/views/abhinay.ejs
@@ -200,7 +200,7 @@
                 <div id="profile"></div>
                 <h1 style="font-family: 'Zilla Slab', serif;">Abhinay Agrawal</h1>
                 <hr id="g">
-                <h3 style="font-family: 'Ubuntu', sans-serif;">SOFTWARE, SYSTEMS AND AI ENTHUSIAST</h3>
+                <h3 style="font-family: 'Ubuntu', sans-serif;">KING!!!, CHAD!!!!,PERSONALITY IN TOTALITY</h3>
                 <div id="home-icons">
                     <div>
                         <a target="_blank" href="https://www.facebook.com/abhinay.agrawal.940"><i
@@ -216,7 +216,11 @@
 
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore sint laborum provident atque sunt qui odio, numquam delectus aspernatur distinctio ut ex excepturi fuga beatae perspiciatis est modi at deleniti.</p>
+                <p>FRIEND OF FRIENDS, STUD BOII OF THE GANG, AATMA-NIRBHAR FOR ASSIGNMENTS AND QUIZZES, ENTHUSIASM FOR CARDS IS WORLD-FAMOUS, ALSO CO-FOUNDED THE CHEAP DETECTION CLUB IN 211 :p ALONG WITH ARJUN, REFER TO HIM IF U HAVE DOUBTs IN ANY COURSES
+                </p>
+                <h1>PS:</h1>
+                <h2> REVA K MAHARAJA
+                </h2>
             </div>
         </div>
 
