--- a/views/aditya.ejs
+++ b/views/aditya.ejs
@@ -200,7 +200,7 @@
                 <div id="profile"></div>
                 <h1 style="font-family: 'Zilla Slab', serif;">Aditya Singh Chauhan</h1>
                 <hr id="g">
-                <h3 style="font-family: 'Ubuntu', sans-serif;">SOFTWARE, SYSTEMS AND AI ENTHUSIAST</h3>
+                <h3 style="font-family: 'Ubuntu', sans-serif;">CS,OUTDOOR TRIPS AND PABAM ENTHUSIAST</h3>
                 <div id="home-icons">
                     <div>
                         <a target="_blank" href="https://www.facebook.com/asc2205"><i
@@ -216,7 +216,9 @@
 
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore sint laborum provident atque sunt qui odio, numquam delectus aspernatur distinctio ut ex excepturi fuga beatae perspiciatis est modi at deleniti.</p>
+                <p>MOST POPULAR BOII OF THE GANG(ESPECIALLY IN........),SUPER STUD AND FOCUSED, HUMOR BANK BALANCE AUR DIL BAHUT BARA H INKA, SUPER FRIENDLY AND THE KIND OF MAN U WANT IN YOUR BAD TIMES, ALSO AN ACTIVE MEMBER OF CHEAP DETECTION GROUP </p>
+                <h1>PS:</h1>
+                <h2>INTOLERANT TO CHEAPNESS</h2>
             </div>
         </div>
 
