--- a/views/akram.ejs
+++ b/views/akram.ejs
@@ -200,7 +200,7 @@
                 <div id="profile"></div>
                 <h1 style="font-family: 'Zilla Slab', serif;">Akram Khan</h1>
                 <hr id="g">
-                <h3 style="font-family: 'Ubuntu', sans-serif;">SOFTWARE, SYSTEMS AND AI ENTHUSIAST</h3>
+                <h3 style="font-family: 'Ubuntu', sans-serif;">DEVELOPMENT, BIRYANI AND TT ENTHUSIAST</h3>
                 <div id="home-icons">
                     <div>
                         <a target="_blank" href="https://www.facebook.com/profile.php?id=100039960969538"><i
@@ -216,8 +216,11 @@
 
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore sint laborum provident atque sunt qui odio, numquam delectus aspernatur distinctio ut ex excepturi fuga beatae perspiciatis est modi at deleniti.</p>
+                <p>SUPER LAZY AND RELUCTANT IN GENERAL AT THE SAME TIME VERY ENTHUSIASTIC AND DEDICATED INDIVIDUAL, GIVES TOUGH COMPETITION TO HARSH IN INTROVERCY, VERY SERIOUS ABOUT HIS WORK, BEST TT PLAYER IN THE GANG!!!, CARDS AND BIRYANI K LIYE JAAN
+                    BHI HAAZIR H:p </p>
             </div>
+            <h1>PS:</h1>
+            <h2> PATTE KISPE PASS H??? </h2>
         </div>
 
 
