--- a/views/arjun.ejs
+++ b/views/arjun.ejs
@@ -200,7 +200,7 @@
                 <div id="profile"></div>
                 <h1 style="font-family: 'Zilla Slab', serif;">Arjun Khanwalkar</h1>
                 <hr id="g">
-                <h3 style="font-family: 'Ubuntu', sans-serif;">SOFTWARE, SYSTEMS AND AI ENTHUSIAST</h3>
+                <h3 style="font-family: 'Ubuntu', sans-serif;">LITERATURE,FOOTBALL AND FOOD ENTHUSIAST</h3>
                 <div id="home-icons">
                     <div>
                         <a target="_blank" href="https://www.facebook.com/arjun.khanwalkar.3"><i
@@ -216,8 +216,11 @@
 
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore sint laborum provident atque sunt qui odio, numquam delectus aspernatur distinctio ut ex excepturi fuga beatae perspiciatis est modi at deleniti.</p>
+                <p>LOVES HIS WORK AND ONLY DOES THOSE WORK WHICH HE LOVES:p, ONE OF THE MAJOR MOTIVATION FOR HIS SURIVAL IS THAT HE COULD EAT,(literally he could make the canteen vendors cry if they only take his order), BEST FOOTBALLER OF THE GANG(only
+                    one who plays too:p), PERFECT MAN TO HAVE A LOGICAL DEBATE </p>
             </div>
+            <h1>PS:</h1>
+            <h2> JAI HIND JAI MAHARASTRA!!!!!</h2>
         </div>
 
 
