--- a/views/harsh.ejs
+++ b/views/harsh.ejs
@@ -101,7 +101,7 @@
     }
     
     p {
-        font-family: 'Lobster', cursive;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         font-size: x-large;
     }
     
@@ -200,7 +200,7 @@
                 <div id="profile"></div>
                 <h1 style="font-family: 'Zilla Slab', serif;">Harsh garg</h1>
                 <hr id="g">
-                <h3 style="font-family: 'Ubuntu', sans-serif;">SOFTWARE, SYSTEMS AND AI ENTHUSIAST</h3>
+                <h3 style="font-family: 'Ubuntu', sans-serif;">CODING,AMUL MILK AND GYM ENTHUSIAST</h3>
                 <div id="home-icons">
                     <div>
                         <a target="_blank" href="#"><i
@@ -216,7 +216,10 @@
 
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore sint laborum provident atque sunt qui odio, numquam delectus aspernatur distinctio ut ex excepturi fuga beatae perspiciatis est modi at deleniti.</p>
+                <p>AN EPITOME OF INTROVERCY,MULTIPLE FAILED ATTEMPTS TO TAKE DOWN ADITYA SINGH CHAUHAN IN A ONE TO ONE FIGHT,LOVES HARYANA AND GYM ,ENTHUSIASTIC AND QUICK LEARNER OF TECHNEOLOGY,BEST CODER OF THE GANG!!!!!!</p>
+                <h1>PS:</h1>
+                <h2> apne ko to je chhaiye </h2>
+
             </div>
         </div>
 
