--- a/views/harshit.ejs
+++ b/views/harshit.ejs
@@ -200,7 +200,7 @@
                 <div id="profile"></div>
                 <h1 style="font-family: 'Zilla Slab', serif;">Harshit Chaudhary</h1>
                 <hr id="g">
-                <h3 style="font-family: 'Ubuntu', sans-serif;">SOFTWARE, SYSTEMS AND AI ENTHUSIAST</h3>
+                <h3 style="font-family: 'Ubuntu', sans-serif;">TT,A BED WITH ATTACHED CHARGING POINT AND EX-PUBG ENTHUSIAST</h3>
                 <div id="home-icons">
                     <div>
                         <a target="_blank" href="https://www.facebook.com/iamharshitchaudhary"><i
@@ -216,8 +216,11 @@
 
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore sint laborum provident atque sunt qui odio, numquam delectus aspernatur distinctio ut ex excepturi fuga beatae perspiciatis est modi at deleniti.</p>
+                <p>TRUELY DEDICATED ABOUT EDUCATING INDIANS ABOUT THE SCOPE OF E-GAMING SECTOR IN THE UPCOMING DECADES,FOR WHICH HE HIMSELF HAS DID RESEARCH FOR ABOUT 10 HRS DAILY FOR MULTIPLE YEARS, AN IDEAL ENGINEER BY MEANS HE HAS DONE IT ALL WHAT IT
+                    TAKES TO BE AN TRUE ENGINEER </p>
             </div>
+            <h1>PS:</h1>
+            <h2> TRU ENGINEOR!!!! </h2>
         </div>
 
 
