--- a/views/shivam.ejs
+++ b/views/shivam.ejs
@@ -200,7 +200,7 @@
                 <div id="profile"></div>
                 <h1 style="font-family: 'Zilla Slab', serif;">Shivam Sundram</h1>
                 <hr id="g">
-                <h3 style="font-family: 'Ubuntu', sans-serif;">SOFTWARE, SYSTEMS AND AI ENTHUSIAST</h3>
+                <h3 style="font-family: 'Ubuntu', sans-serif;">SLEEPING,POETRY AND HUMOR ENTHUSIAST</h3>
                 <div id="home-icons">
                     <div>
                         <a target="_blank" href="https://www.facebook.com/profile.php?id=100024784236218"><i
@@ -216,7 +216,9 @@
 
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore sint laborum provident atque sunt qui odio, numquam delectus aspernatur distinctio ut ex excepturi fuga beatae perspiciatis est modi at deleniti.</p>
+                <p>GO TO HOME PAGE===>CONTACTS===>GITHUB LINK=====>JAKE KOI LIKH DO PLSSSSS!!!!!!!!!!!</p>
+                <h1>PS:</h1>
+                <h2> LMAO NOOBS </h2>
             </div>
         </div>
 
