--- a/views/STORIES.ejs
+++ b/views/STORIES.ejs
@@ -140,6 +140,8 @@
                 <h4 id="pox">
                     <%=element.message%>
                 </h4>
+                </div>
+               </div>
 
 
 </body>
