--- a/views/arjun.ejs
+++ b/views/arjun.ejs
@@ -2,12 +2,10 @@
 <html lang="en">
 
 <head>
-
     <title>Arjun | 211</title>
     <link rel = "icon" href =  
     "https://upload.wikimedia.org/wikipedia/commons/9/9a/US_211.svg" 
             type = "image/x-icon"> 
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,9 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=IM+Fell+Double+Pica+SC&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
-
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
-
 
 </head>
 <style>
@@ -35,7 +31,7 @@
     }
     
     #profile {
-        background-image: url(arjun.jpg);
+        background-image: url(https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/90472272_100685368241841_5375497255681785856_o.jpg?_nc_cat=107&_nc_sid=09cbfe&_nc_ohc=KdanFTdWhssAX8viXU4&_nc_ht=scontent.fknu1-1.fna&oh=19bfab51c8461e5ccc0f66d52efcd9d8&oe=5F80F259);
         background-size: cover;
         border-radius: 50%;
         z-index: 1;
@@ -108,10 +104,8 @@
     }
     
     p {
-
         font-family: 'Quicksand', sans-serif;
-
-
+        font-size: x-large;
     }
     
     html,
@@ -197,9 +191,7 @@
                         onclick="showAbout()"></a>
             </span>
             <a href="/contact">Contact</a>
-
             <a href="/contribute">Contribute </a>
-
             <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
             </a> -->
@@ -216,12 +208,10 @@
                     <div>
                         <a target="_blank" href="https://www.facebook.com/arjun.khanwalkar.3"><i
                                 class="fa fa-facebook"></i></a>
-
                         <!-- <a target="_blank" href="#"><i class="fa fa-github"
                                 style="font-size:36px"></i></a>
                         <a target="_blank" href="#"><i class="fa fa-linkedin-square"
                                 style="font-size:36px"></i></a> -->
-
                         <a target="_blank" href="https://www.instagram.com/arjun_239_/"><i class="fa fa-instagram"
                                 style="font-size:36px"></i></a>
                         <a href="mailto:b19239@students.iitmandi.ac.in" target="_blank"><i class="fa fa-envelope"
@@ -229,13 +219,11 @@
 
                     </div>
                 </div>
-
                 <p>Loves his work and only does those work which he loves:p, one of the major motivation for his surival is that he could eat,(literally he could make the canteen vendors cry if they only take his order), best footballer of the gang(only
                     one who plays too:p), perfect man to have a logical debate. </p>
             </div>
             
             <h2 style="font-family: 'Quicksand', sans-serif;"> PS: JAI HIND JAI MAHARASTRA!!!!!</h2>
-
         </div>
 
 
