--- a/views/c.ejs
+++ b/views/c.ejs
@@ -2,12 +2,10 @@
 <html lang="en">
 
 <head>
-
     <title>Contact | 211</title>
     <link rel = "icon" href =  
     "https://upload.wikimedia.org/wikipedia/commons/9/9a/US_211.svg" 
             type = "image/x-icon"> 
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -152,9 +150,7 @@
                         onclick="showAbout()"></a>
             </span>
             <a href="/contact">Contact</a>
-
             <a href="/contribute">Contribute </a>
-
             <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
             </a> -->
@@ -171,7 +167,7 @@
         </div>
         <div class="box">
             <div class="akram">
-                <img src="ak.jpg" class="circle">
+                <img src="https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/69405939_123622245646474_6832581339099693056_n.jpg?_nc_cat=107&_nc_sid=174925&_nc_ohc=1BVufFUNJGkAX8GA_ke&_nc_ht=scontent.fknu1-1.fna&oh=a790e6ff563834ad4d8c121226354c75&oe=5F8147EA" class="circle">
                 <br>
                 <p class="speaker-text speaker-name">Md.Akram Khan</p>
 
@@ -187,7 +183,7 @@
                 <p id="g">B19215@students.iitmandi.ac.in</p>
             </div>
             <div class="shivam">
-                <img src="shivam.jpg" class="circle">
+                <img src="https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/68893298_475076083328529_659245941991145472_n.jpg?_nc_cat=102&_nc_sid=09cbfe&_nc_ohc=B8hlbhOsBF4AX-MF3zq&_nc_ht=scontent.fknu1-1.fna&oh=28cb19c8309d7b286845bd89e7701e16&oe=5F831BE9" class="circle">
                 <br>
                 <p class="speaker-text speaker-name">Shivam Sundram</p>
                 <div>
@@ -201,7 +197,7 @@
                 <p id="g">B19021@students.iitmandi.ac.in</p>
             </div>
             <div class="aadi">
-                <img src="aadi.jpeg" class="circle">
+                <img src="https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/82208327_2520501884831749_5037329629786931200_o.jpg?_nc_cat=108&_nc_sid=09cbfe&_nc_ohc=hcEvMUlO6PUAX-QSEx3&_nc_ht=scontent.fknu1-1.fna&oh=8b5cb613186c34f11266549439c21447&oe=5F824C3E" class="circle">
                 <br>
                 <p class="speaker-text speaker-name">Aditya Singh Chauhan</p>
                 <div>
