--- a/views/harsh.ejs
+++ b/views/harsh.ejs
@@ -2,12 +2,10 @@
 <html lang="en">
 
 <head>
-
     <title>Harsh | 211</title>
     <link rel = "icon" href =  
     "https://upload.wikimedia.org/wikipedia/commons/9/9a/US_211.svg" 
             type = "image/x-icon"> 
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,9 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=IM+Fell+Double+Pica+SC&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
-
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
-
 
 </head>
 <style>
@@ -35,7 +31,7 @@
     }
     
     #profile {
-        background-image: url(harsh.png);
+        background-image: url(https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/119088349_154320246320187_3085608309432046314_n.jpg?_nc_cat=102&_nc_sid=09cbfe&_nc_ohc=i4UYOION7WoAX9Iy1ou&_nc_ht=scontent.fknu1-1.fna&oh=3cbf7fd9ac977cb5e3ec49c50bff697c&oe=5F82AEB0);
         background-size: cover;
         border-radius: 50%;
         z-index: 1;
@@ -108,7 +104,6 @@
     }
     
     p {
-
         font-family: 'Quicksand', sans-serif;
         font-size: x-large;
     }
@@ -182,6 +177,7 @@
             padding: 0%;
         }
     }
+  
 </style>
 
 
@@ -196,9 +192,7 @@
                         onclick="showAbout()"></a>
             </span>
             <a href="/contact">Contact</a>
-
             <a href="/contribute">Contribute </a>
-
             <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
             </a> -->
@@ -213,16 +207,12 @@
                 <h3 style="font-family: 'Ubuntu', sans-serif;">CODING,AMUL MILK AND GYM ENTHUSIAST</h3>
                 <div id="home-icons">
                     <div>
-\
                         <!-- <a target="_blank" href="#"><i
-
                                 class="fa fa-facebook"></i></a>
                         <a target="_blank" href="#"><i class="fa fa-github"
                                 style="font-size:36px"></i></a>
                         <a target="_blank" href="#"><i class="fa fa-linkedin-square"
-
                                 style="font-size:36px"></i></a> -->
-
                         <a target="_blank" href="https://www.instagram.com/harshgarg7562/"><i class="fa fa-instagram"
                                 style="font-size:36px"></i></a>
                         <a href="mailto:b19163@students.iitmandi.ac.in" target="_blank"><i class="fa fa-envelope"
@@ -230,11 +220,9 @@
 
                     </div>
                 </div>
-
                 <p>An epitome of introvercy,multiple failed attempts to take down aditya singh chauhan in a one to one fight,loves haryana and gym ,enthusiastic and quick learner of techneology,best coder of the gang!!!!!!</p>
                 
                 <h2 style="font-family: 'Quicksand', sans-serif;"> PS: Apne ko to je chhaiye </h2>
-
 
             </div>
         </div>
