--- a/views/shivam.ejs
+++ b/views/shivam.ejs
@@ -2,12 +2,10 @@
 <html lang="en">
 
 <head>
-
     <title>Shivam | 211</title>
     <link rel = "icon" href =  
     "https://upload.wikimedia.org/wikipedia/commons/9/9a/US_211.svg" 
             type = "image/x-icon"> 
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,9 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=IM+Fell+Double+Pica+SC&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
-
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
-
 
 </head>
 <style>
@@ -35,7 +31,7 @@
     }
     
     #profile {
-        background-image: url(shivam.jpg);
+        background-image: url(https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/68893298_475076083328529_659245941991145472_n.jpg?_nc_cat=102&_nc_sid=09cbfe&_nc_ohc=B8hlbhOsBF4AX-MF3zq&_nc_ht=scontent.fknu1-1.fna&oh=28cb19c8309d7b286845bd89e7701e16&oe=5F831BE9);
         background-size: cover;
         border-radius: 50%;
         z-index: 1;
@@ -108,9 +104,7 @@
     }
     
     p {
-
         font-family: 'Quicksand', sans-serif;
-
         font-size: x-large;
     }
     
@@ -197,9 +191,7 @@
                         onclick="showAbout()"></a>
             </span>
             <a href="/contact">Contact</a>
-
             <a href="/contribute">Contribute </a>
-
             <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
             </a> -->
@@ -227,11 +219,9 @@
 
                     </div>
                 </div>
-
                 <p>Go to home page===>contacts===>github link=====>jake koi likh do plsssss!!!!!!!!!!!</p>
                 
                 <h2 style="font-family: 'Quicksand', sans-serif;"> PS: LMAO NOOBS </h2>
-
             </div>
         </div>
 
