--- a/views/STORIES.ejs
+++ b/views/STORIES.ejs
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Memories | 211</title>
+    <link rel = "icon" href =  
+    "https://upload.wikimedia.org/wikipedia/commons/9/9a/US_211.svg" 
+            type = "image/x-icon"> 
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=IM+Fell+Double+Pica+SC&family=Ubuntu&display=swap" rel="stylesheet">
 </head>
