--- a/views/c.ejs
+++ b/views/c.ejs
@@ -142,14 +142,14 @@
 <body>
     <header>
         <div class="topnav" id="myTopnav">
-            <a href="/" class="active">Home</a>
+            <a href="/" >Home</a>
             <a href="/memories">Memories</a>
             <span id="midlogo">
                 <a  href="#"><img class="logo"
                         src="https://upload.wikimedia.org/wikipedia/commons/9/9a/US_211.svg" height="30px"
                         onclick="showAbout()"></a>
             </span>
-            <a href="/contact">Contact</a>
+            <a href="/contact" class="active">Contact</a>
             <a href="/contribute">Contribute </a>
             <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
@@ -204,8 +204,7 @@
                     <a target="_blank" href="https://www.facebook.com/asc2205"><i class="fa fa-facebook"></i></a>
                     <a target="_blank" href="https://github.com/atrss/"><i class="fa fa-github"
                             style="font-size:36px"></i></a>
-                    <a target="_blank" href="https://www.linkedin.com/in/itsmak/"><i class="fa fa-linkedin-square"
-                            style="font-size:36px"></i></a>
+                    
                 </div>
                 <p id="g">B19025@students.iitmandi.ac.in</p>
             </div>
