--- a/views/contribute.ejs
+++ b/views/contribute.ejs
@@ -233,9 +233,9 @@
       <div class="circle"></div>
       <div class="form-inner">
         <h1 style="font-family: 'Quicksand', sans-serif;" >Our memories, your words🧡</h1>
-        <input type="text" id="sex" name="name" placeholder="Your Name">
+        <input type="text" id="sex" name="name" placeholder="Your Name" required>
         
-        <textarea type="text" id="pex" name="message" placeholder="Message..." rows="5"></textarea>
+        <textarea type="text" id="pex" name="message" placeholder="Message..." rows="5" required></textarea>
         <button type="submit" >Submit</button>
       </div>
     </form>
