--- a/views/arjun.ejs
+++ b/views/arjun.ejs
@@ -183,7 +183,7 @@
 <body class="home-body">
     <header>
         <div class="topnav" id="myTopnav">
-            <a href="/" class="active">Home</a>
+            <a href="/" >Home</a>
             <a href="/memories">Memories</a>
             <span id="midlogo">
                 <a  href="#"><img class="logo"
