--- a/views/harsh.ejs
+++ b/views/harsh.ejs
@@ -184,7 +184,7 @@
 <body class="home-body">
     <header>
         <div class="topnav" id="myTopnav">
-            <a href="/" class="active">Home</a>
+            <a href="/" >Home</a>
             <a href="/memories">Memories</a>
             <span id="midlogo">
                 <a  href="#"><img class="logo"
@@ -220,7 +220,7 @@
 
                     </div>
                 </div>
-                <p>An epitome of introvercy,multiple failed attempts to take down aditya singh chauhan in a one to one fight,loves haryana and gym ,enthusiastic and quick learner of techneology,best coder of the gang!!!!!!</p>
+                <p>An epitome of introvercy,multiple failed attempts to take down aditya singh chauhan in a one to one fight,loves haryana and gym ,enthusiastic and quick learner of technology,best coder of the gang!!!!!!</p>
                 
                 <h2 style="font-family: 'Quicksand', sans-serif;"> PS: Apne ko to je chhaiye </h2>
 
