--- a/views/abhinay.ejs
+++ b/views/abhinay.ejs
@@ -31,7 +31,7 @@
     }
     
     #profile {
-        background-image: url(abhinay.jpg);
+        background-image: url(https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/67565130_107909440543768_4435004562952159232_n.jpg?_nc_cat=101&_nc_sid=09cbfe&_nc_ohc=a1mVq2EDVBUAX-CIBHC&_nc_ht=scontent.fknu1-1.fna&oh=40951bdbb1b92d0d1430705fce9984bc&oe=5F80CD57);
         background-size: cover;
         border-radius: 50%;
         z-index: 1;
