--- a/views/harsh.ejs
+++ b/views/harsh.ejs
@@ -31,7 +31,7 @@
     }
     
     #profile {
-        background-image: url(harsh.png);
+        background-image: url(https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/119088349_154320246320187_3085608309432046314_n.jpg?_nc_cat=102&_nc_sid=09cbfe&_nc_ohc=i4UYOION7WoAX9Iy1ou&_nc_ht=scontent.fknu1-1.fna&oh=3cbf7fd9ac977cb5e3ec49c50bff697c&oe=5F82AEB0);
         background-size: cover;
         border-radius: 50%;
         z-index: 1;
