--- a/views/shivam.ejs
+++ b/views/shivam.ejs
@@ -31,7 +31,7 @@
     }
     
     #profile {
-        background-image: url(shivam.jpg);
+        background-image: url(https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/68893298_475076083328529_659245941991145472_n.jpg?_nc_cat=102&_nc_sid=09cbfe&_nc_ohc=B8hlbhOsBF4AX-MF3zq&_nc_ht=scontent.fknu1-1.fna&oh=28cb19c8309d7b286845bd89e7701e16&oe=5F831BE9);
         background-size: cover;
         border-radius: 50%;
         z-index: 1;
