--- a/views/STORIES.ejs
+++ b/views/STORIES.ejs
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>Memories | 211</title>
+    <link rel = "icon" href =  
+    "https://upload.wikimedia.org/wikipedia/commons/9/9a/US_211.svg" 
+            type = "image/x-icon"> 
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=IM+Fell+Double+Pica+SC&family=Ubuntu&display=swap" rel="stylesheet">
 </head>
@@ -140,20 +142,6 @@
                 <h4 id="pox">
                     <%=element.message%>
                 </h4>
-</head>
-
-<body>
-    <h1>here we go!!!!!!!!</h1>
-    <div id="sex">
-        <% array.forEach(element => { %>
-            <div id="pex">
-                <p>
-                    <%=element.name%>
-                </p>
-                <br>
-                <h1 id="pox">
-                    <%=element.message%>
-                </h1>
 
 
             </div>
@@ -161,6 +149,5 @@
             <%})%>
     </div>
 </body>
-
 
 </html>
