--- a/views/abhinay.ejs
+++ b/views/abhinay.ejs
@@ -2,13 +2,10 @@
 <html lang="en">
 
 <head>
-
     <title>Abhinay | 211</title>
     <link rel = "icon" href =  
     "https://upload.wikimedia.org/wikipedia/commons/9/9a/US_211.svg" 
             type = "image/x-icon"> 
-
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,11 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=IM+Fell+Double+Pica+SC&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
-
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
-
-
-
 
 </head>
 <style>
@@ -111,10 +104,7 @@
     }
     
     p {
-
         font-family: 'Quicksand', sans-serif;
-
-
         font-size: x-large;
     }
     
@@ -193,7 +183,7 @@
 <body class="home-body">
     <header>
         <div class="topnav" id="myTopnav">
-            <a href="/" class="active">Home</a>
+            <a href="/" >Home</a>
             <a href="/memories">Memories</a>
             <span id="midlogo">
                 <a  href="#"><img class="logo"
@@ -201,10 +191,7 @@
                         onclick="showAbout()"></a>
             </span>
             <a href="/contact">Contact</a>
-
             <a href="/contribute">Contribute</a>
-
-
             <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
             </a> -->
@@ -221,10 +208,8 @@
                     <div>
                         <a target="_blank" href="https://www.facebook.com/abhinay.agrawal.940"><i
                                 class="fa fa-facebook"></i></a>
-
                         <!-- <a target="_blank" href="#"><i class="fa fa-github"
                                 style="font-size:36px"></i></a> -->
-
                         <a target="_blank" href="https://www.linkedin.com/in/abhinay-agrawal-3841371a4/"><i class="fa fa-linkedin-square"
                                 style="font-size:36px"></i></a>
                         <a target="_blank" href="https://www.instagram.com/abhinay_321/"><i class="fa fa-instagram"
@@ -234,12 +219,10 @@
 
                     </div>
                 </div>
-
                 <p>Friend of friends, stud boii of the gang, aatma-nirbhar for assignments and quizzes, enthusiasm for cards is world-famous, also co-founded the cheap detection club in 211 :p along with arjun, refer to him if u have doubts in any courses.
                 </p>
                 <h2 style="font-family: 'Quicksand', sans-serif;"> PS: Reva k Maharaja.
-
- </h2>
+                </h2>
             </div>
         </div>
 
