--- a/views/akram.ejs
+++ b/views/akram.ejs
@@ -2,13 +2,10 @@
 <html lang="en">
 
 <head>
-
     <title>Akram | 211</title>
     <link rel = "icon" href =  
     "https://upload.wikimedia.org/wikipedia/commons/9/9a/US_211.svg" 
             type = "image/x-icon"> 
-
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,11 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=IM+Fell+Double+Pica+SC&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
-
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
-
-
-
 
 </head>
 <style>
@@ -111,9 +104,7 @@
     }
     
     p {
-
         font-family: 'Quicksand', sans-serif;
-
         font-size: x-large;
     }
     
@@ -192,7 +183,7 @@
 <body class="home-body">
     <header>
         <div class="topnav" id="myTopnav">
-            <a href="/" class="active">Home</a>
+            <a href="/" >Home</a>
             <a href="/memories">Memories</a>
             <span id="midlogo">
                 <a  href="#"><img class="logo"
@@ -200,10 +191,7 @@
                         onclick="showAbout()"></a>
             </span>
             <a href="/contact">Contact</a>
-
             <a href="/contribute">Contribute </a>
-
-
             <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
             </a> -->
@@ -231,12 +219,10 @@
 
                     </div>
                 </div>
-
                 <p >Super lazy and reluctant in general at the same time very enthusiastic and dedicated individual, gives tough competition to Harsh in introvercy, very serious about his work, best TT player in the Gang!!!, cards and biryani k liye jaan
                     bhi haazir h:p </p>
             </div>
             <h2 style="font-family: 'Quicksand', sans-serif;"> PS: Patte kiske pass h??? </h2>
-
         </div>
 
 
