--- a/views/c.ejs
+++ b/views/c.ejs
@@ -2,12 +2,10 @@
 <html lang="en">
 
 <head>
-
     <title>Contact | 211</title>
     <link rel = "icon" href =  
     "https://upload.wikimedia.org/wikipedia/commons/9/9a/US_211.svg" 
             type = "image/x-icon"> 
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -144,17 +142,15 @@
 <body>
     <header>
         <div class="topnav" id="myTopnav">
-            <a href="/" class="active">Home</a>
+            <a href="/" >Home</a>
             <a href="/memories">Memories</a>
             <span id="midlogo">
                 <a  href="#"><img class="logo"
                         src="https://upload.wikimedia.org/wikipedia/commons/9/9a/US_211.svg" height="30px"
                         onclick="showAbout()"></a>
             </span>
-            <a href="/contact">Contact</a>
-
+            <a href="/contact" class="active">Contact</a>
             <a href="/contribute">Contribute </a>
-
             <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
             </a> -->
@@ -208,8 +204,7 @@
                     <a target="_blank" href="https://www.facebook.com/asc2205"><i class="fa fa-facebook"></i></a>
                     <a target="_blank" href="https://github.com/atrss/"><i class="fa fa-github"
                             style="font-size:36px"></i></a>
-                    <a target="_blank" href="https://www.linkedin.com/in/itsmak/"><i class="fa fa-linkedin-square"
-                            style="font-size:36px"></i></a>
+                    
                 </div>
                 <p id="g">B19025@students.iitmandi.ac.in</p>
             </div>
