--- a/views/harshit.ejs
+++ b/views/harshit.ejs
@@ -2,12 +2,10 @@
 <html lang="en">
 
 <head>
-
     <title>Harshit | 211</title>
     <link rel = "icon" href =  
     "https://upload.wikimedia.org/wikipedia/commons/9/9a/US_211.svg" 
             type = "image/x-icon"> 
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,9 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=IM+Fell+Double+Pica+SC&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
-
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
-
 
 </head>
 <style>
@@ -108,9 +104,7 @@
     }
     
     p {
-
         font-family: 'Quicksand', sans-serif;
-
         font-size: x-large;
     }
     
@@ -189,7 +183,7 @@
 <body class="home-body">
     <header>
         <div class="topnav" id="myTopnav">
-            <a href="/" class="active">Home</a>
+            <a href="/" >Home</a>
             <a href="/memories">Memories</a>
             <span id="midlogo">
                 <a  href="#"><img class="logo"
@@ -197,9 +191,7 @@
                         onclick="showAbout()"></a>
             </span>
             <a href="/contact">Contact</a>
-
             <a href="/contribute">Contribute </a>
-
             <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
             </a> -->
@@ -216,12 +208,10 @@
                     <div>
                         <a target="_blank" href="https://www.facebook.com/iamharshitchaudhary"><i
                                 class="fa fa-facebook"></i></a>
-
                         <!-- <a target="_blank" href="#"><i class="fa fa-github"
                                 style="font-size:36px"></i></a>
                         <a target="_blank" href="#"><i class="fa fa-linkedin-square"
                                 style="font-size:36px"></i></a> -->
-
                         <a target="_blank" href="https://www.instagram.com/harshit_hc26/"><i class="fa fa-instagram"
                                 style="font-size:36px"></i></a>
                         <a href="mailto:b19164@students.iitmandi.ac.in" target="_blank"><i class="fa fa-envelope"
@@ -229,13 +219,11 @@
 
                     </div>
                 </div>
-
                 <p>Truely dedicated about educating indians about the scope of e-gaming sector in the upcoming decades,for which he himself has did research for about 10 hrs daily for multiple years, an ideal engineer by means he has done it all what it
                     takes to be an true engineer. </p>
             </div>
             
             <h2 style="font-family: 'Quicksand', sans-serif;">PS: TRU ENGINEOR!!!! </h2>
-
         </div>
 
 
