--- a/views/aditya.ejs
+++ b/views/aditya.ejs
@@ -2,13 +2,10 @@
 <html lang="en">
 
 <head>
-
     <title>Aditya | 211</title>
     <link rel = "icon" href =  
     "https://upload.wikimedia.org/wikipedia/commons/9/9a/US_211.svg" 
             type = "image/x-icon"> 
-
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,11 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=IM+Fell+Double+Pica+SC&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
-
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
-
-
-
 
 </head>
 <style>
@@ -111,9 +104,7 @@
     }
     
     p {
-
         font-family: 'Quicksand', sans-serif;
-
         font-size: x-large;
     }
     
@@ -192,7 +183,7 @@
 <body class="home-body">
     <header>
         <div class="topnav" id="myTopnav">
-            <a href="/" class="active">Home</a>
+            <a href="/" >Home</a>
             <a href="/memories">Memories</a>
             <span id="midlogo">
                 <a  href="#"><img class="logo"
@@ -200,9 +191,7 @@
                         onclick="showAbout()"></a>
             </span>
             <a href="/contact">Contact</a>
-
             <a href="/contribute">Contribute </a>
-
             <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
             </a> -->
@@ -221,11 +210,8 @@
                                 class="fa fa-facebook"></i></a>
                         <a target="_blank" href="https://github.com/atrss/"><i class="fa fa-github"
                                 style="font-size:36px"></i></a>
-
                         <!-- <a target="_blank" href="#"><i class="fa fa-linkedin-square"
                                 style="font-size:36px"></i></a> -->
-
-
                         <a target="_blank" href="https://www.instagram.com/asc_2010/"><i class="fa fa-instagram"
                                 style="font-size:36px"></i></a>
                         <a href="mailto:b19025@students.iitmandi.ac.in" target="_blank"><i class="fa fa-envelope"
@@ -233,12 +219,9 @@
 
                     </div>
                 </div>
-
                 <p>Most popular boii of the gang(especially in........),super stud and focused, humor bank balance aur dil bahut bara h inka, super friendly and the kind of man u want in your bad times, also an active member of cheap detection group. </p>
                 
                 <h2 style="font-family: 'Quicksand', sans-serif;">PS: Intolerant to cheapness.</h2>
-
-
             </div>
         </div>
 
