--- a/views/contribute.ejs
+++ b/views/contribute.ejs
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
   <head>
@@ -234,40 +233,11 @@
       <div class="circle"></div>
       <div class="form-inner">
         <h1 style="font-family: 'Quicksand', sans-serif;" >Our memories, your words🧡</h1>
-        <input type="text" id="sex" name="name" placeholder="Your Name">
+        <input type="text" id="sex" name="name" placeholder="Your Name" required>
         
-        <textarea type="text" id="pex" name="message" placeholder="Message..." rows="5"></textarea>
+        <textarea type="text" id="pex" name="message" placeholder="Message..." rows="5" required></textarea>
         <button type="submit" >Submit</button>
       </div>
     </form>
   </body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Contribute | 211</title>
-    <link rel = "icon" href =  
-    "https://upload.wikimedia.org/wikipedia/commons/9/9a/US_211.svg" 
-            type = "image/x-icon"> 
-</head>
-<style>
-
-</style>
-
-<body>
-
-    <form method="POST" action="/daal" id="fo">
-        <span>Name : </span><input type="text" id="sex" name="name"  required/><br>
-        <span>Content :</span><input type="text" id="pex" name="message" required/><br>
-        <button type="submit">submit here</button>
-    
- </div>
-
-</body>
-
->>>>>>> dd166961298f969c0c6ecafa3f743866d849078b
 </html>
