--- a/views/home.ejs
+++ b/views/home.ejs
@@ -184,25 +184,25 @@
 
         <div class="box">
             <div class="akram">
-                <a href="/akram" target="blank"><img src="https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/69405939_123622245646474_6832581339099693056_n.jpg?_nc_cat=107&_nc_sid=174925&_nc_ohc=1BVufFUNJGkAX8GA_ke&_nc_ht=scontent.fknu1-1.fna&oh=a790e6ff563834ad4d8c121226354c75&oe=5F8147EA" class="circle"></a>
+                <a href="/akram" target="blank"><img src="https://scontent.flko4-1.fna.fbcdn.net/v/t1.0-9/123692455_373948943947135_4960322748329735603_n.jpg?_nc_cat=102&ccb=2&_nc_sid=09cbfe&_nc_ohc=Y2lzcqN3uqIAX9PnZKv&_nc_ht=scontent.flko4-1.fna&oh=4c42c1e219fe1008f25296400954c9e6&oe=6045EFCF" class="circle"></a>
             </div>
             <div class="aadi">
-                <a href="/aditya" target="blank"><img src="https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/82208327_2520501884831749_5037329629786931200_o.jpg?_nc_cat=108&_nc_sid=09cbfe&_nc_ohc=hcEvMUlO6PUAX-QSEx3&_nc_ht=scontent.fknu1-1.fna&oh=8b5cb613186c34f11266549439c21447&oe=5F824C3E" class="circle"></a>
+                <a href="/aditya" target="blank"><img src="https://scontent.flko4-1.fna.fbcdn.net/v/t1.0-9/82208327_2520501884831749_5037329629786931200_o.jpg?_nc_cat=108&ccb=2&_nc_sid=09cbfe&_nc_ohc=k8NGGAN6yuwAX9eQ1HE&_nc_ht=scontent.flko4-1.fna&oh=fbb5d751d3b2b795b6aae5ac2e21b567&oe=60480D3E" class="circle"></a>
             </div>
             <div class="shivam">
-                <a href="/shivam" target="blank"><img src="https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/68893298_475076083328529_659245941991145472_n.jpg?_nc_cat=102&_nc_sid=09cbfe&_nc_ohc=B8hlbhOsBF4AX-MF3zq&_nc_ht=scontent.fknu1-1.fna&oh=28cb19c8309d7b286845bd89e7701e16&oe=5F831BE9" class="circle"></a>
+                <a href="/shivam" target="blank"><img src="https://scontent.flko4-1.fna.fbcdn.net/v/t1.0-9/68893298_475076083328529_659245941991145472_n.jpg?_nc_cat=102&ccb=2&_nc_sid=09cbfe&_nc_ohc=Ql5AUmCYNK4AX8qpOSJ&_nc_ht=scontent.flko4-1.fna&oh=e09b79ef4e12b3ee35f5c257e665c77a&oe=6044E869" class="circle"></a>
             </div>
             <div class="arjun">
-                <a href="/arjun" target="blank"><img src="https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/90472272_100685368241841_5375497255681785856_o.jpg?_nc_cat=107&_nc_sid=09cbfe&_nc_ohc=KdanFTdWhssAX8viXU4&_nc_ht=scontent.fknu1-1.fna&oh=19bfab51c8461e5ccc0f66d52efcd9d8&oe=5F80F259" class="circle"></a>
+                <a href="/arjun" target="blank"><img src="https://scontent.flko4-1.fna.fbcdn.net/v/t1.0-1/p200x200/90472272_100685368241841_5375497255681785856_o.jpg?_nc_cat=107&ccb=2&_nc_sid=7206a8&_nc_ohc=uQ1PABr3F_sAX8p9oBE&_nc_ht=scontent.flko4-1.fna&tp=6&oh=24ef657c8ed2dc08b77a7455a72150b2&oe=6046A16A" class="circle"></a>
             </div>
             <div class="harshit">
-                <a href="/harshit" target="blank"><img src="https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/67871616_2940278079529683_8607261864461598720_o.jpg?_nc_cat=111&_nc_sid=09cbfe&_nc_ohc=mM0DiIjKLJoAX8axpO6&_nc_ht=scontent.fknu1-1.fna&oh=49d7d88b8b922b4a85bcab76b1146693&oe=5F7FB6AD" class="circle"></a>
+                <a href="/harshit" target="blank"><img src="https://scontent.flko4-1.fna.fbcdn.net/v/t1.0-9/130777430_3466010456956440_907565482314790597_o.jpg?_nc_cat=103&ccb=2&_nc_sid=09cbfe&_nc_ohc=Isyj4b6Y9YgAX824zF0&_nc_ht=scontent.flko4-1.fna&oh=1ed23216e16d16c4e050dc11a449d0b4&oe=60485C49" class="circle"></a>
             </div>
             <div class="harsh">
                 <a href="/harsh" target="blank"><img src="https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/119088349_154320246320187_3085608309432046314_n.jpg?_nc_cat=102&_nc_sid=09cbfe&_nc_ohc=i4UYOION7WoAX9Iy1ou&_nc_ht=scontent.fknu1-1.fna&oh=3cbf7fd9ac977cb5e3ec49c50bff697c&oe=5F82AEB0" class="circle"></a>
             </div>
             <div class="abhinay">
-                <a href="/abhinay" target="blank"><img src="https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/67565130_107909440543768_4435004562952159232_n.jpg?_nc_cat=101&_nc_sid=09cbfe&_nc_ohc=a1mVq2EDVBUAX-CIBHC&_nc_ht=scontent.fknu1-1.fna&oh=40951bdbb1b92d0d1430705fce9984bc&oe=5F80CD57" class="circle"></a>
+                <a href="/abhinay" target="blank"><img src="https://scontent.flko4-1.fna.fbcdn.net/v/t1.0-9/67565130_107909440543768_4435004562952159232_n.jpg?_nc_cat=101&ccb=2&_nc_sid=09cbfe&_nc_ohc=tdLdpMoRZ4cAX9MKsEJ&_nc_ht=scontent.flko4-1.fna&oh=418da33bb42d53254b43cef24f3e3709&oe=60468E57" class="circle"></a>
             </div>
         </div>
 
